# pytorch-deep-learning

./: .gitignore  00_pytorch_fundamentals.ipynb  00_pytorch_fundamentals_PAULS.ipynb  01_pytorch_workflow.ipynb  02_pytorch_classification.ipynb  02_pytorch_computer_vision.ipynb  02_pytorch_computer_vision_v1.ipynb  02_test_computer_vision.ipynb  03_pytorch_computer_vision.ipynb  04_pytorch_custom_datasets.ipynb  05_pytorch_going_modular.md  05_pytorch_transfer_learning.ipynb  06_pytorch_transfer_learning.ipynb  06_pytorch_transfer_learning_v2.ipynb  07_pytorch_experiment_tracking.ipynb  07_pytorch_experiment_tracking_v2.ipynb  07_pytorch_tracking_experiments.ipynb  08_pytorch_paper_replicating.ipynb  09_pytorch_model_deployment.ipynb  09_pytorch_model_deployment_exercises.ipynb  404.html  LICENSE  README.md  SETUP.md  changelog.md  exercise02_multiclass.py  exercise_03.py  exercose_01.py  helper_functions.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test-cuda.ipynb  testcopilot.py  testenv.py
00_pytorch_fundamentals/: index.html
01_pytorch_workflow/: 01_pytorch_workflow.ipynb  index.html
02_pytorch_classification/: 02_pytorch_classification.ipynb  index.html
03_pytorch_computer_vision/: 03_pytorch_computer_vision.ipynb  index.html
04_pytorch_custom_datasets/: 04_pytorch_custom_datasets.ipynb  index.html
05_pytorch_going_modular/: index.html
06_pytorch_transfer_learning/: 06_pytorch_transfer_learning.ipynb  index.html
07_pytorch_experiment_tracking/: 07_pytorch_experiment_tracking.ipynb  index.html
08_pytorch_paper_replicating/: index.html
(+181 files in other folders)
